// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      className="uui-input singleInput"
      onChange={[Function]}
      placeholder="Please select "
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
    style={
      Object {
        "pointerEvents": "auto",
      }
    }
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#folding-arrow-18.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`PickerInput should be rendered correctly 2`] = `
<div
  className="container uui-input-box -clickable root size-48 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <button
      className="container uui-button-box uui-enabled root tag-color size-42 root"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-24.svg"
          />
        </svg>
      </div>
    </button>
    <button
      className="container uui-button-box uui-enabled root tag-color size-42 root"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        className="uui-caption"
      >
        A1
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-24.svg"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="actions"
    style={
      Object {
        "pointerEvents": "auto",
      }
    }
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      style={Object {}}
      tabIndex={-1}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#btn-cross-24.svg"
        />
      </svg>
    </div>
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#folding-arrow-24.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;
